@@ -1,4 +1,4 @@
-$Id: README 35661 2014-11-25 08:47:42Z peter $
+$Id: README 35838 2014-12-16 08:47:28Z peter $
 Copyright 2006-2012 TeX Users Group.
 You may freely use, modify and/or distribute this file.
 
@@ -80,7 +80,7 @@ makejvf - ?
 
 mendexk - maintained here, by us (akira et al.)
 
-ps2pkm - ?
+ps2pk - maintained here, by us
 
 psutils 1.23 - checked 16jan14
   https://github.com/rrthomas/psutils/archive/v1.23.tar.gz
